compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/instance_old.kt
// TARGET_BACKEND: JVM_OLD

<!CONFLICTING_JVM_DECLARATIONS!>object O<!> {
    <!CONFLICTING_JVM_DECLARATIONS!>konst INSTANCE: O<!> = null!!
}

<!CONFLICTING_JVM_DECLARATIONS!>object O2<!> {
    <!CONFLICTING_JVM_DECLARATIONS!>lateinit var INSTANCE: O2<!>
}